fix hero section spacing

--- a/src/css/imports/_buttons.scss
+++ b/src/css/imports/_buttons.scss
@@ -5,6 +5,7 @@
   font-size: 1rem;
   &:hover {
     text-decoration: none;
+    color: #363636;
   }
 
 
